
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int git_repository ;
typedef int git_diff_driver ;
typedef int git_attr_session ;


 size_t DIFF_DRIVER_AUTO ;
 size_t DIFF_DRIVER_BINARY ;
 size_t DIFF_DRIVER_TEXT ;
 scalar_t__ GIT_ATTR_IS_FALSE (char const*) ;
 scalar_t__ GIT_ATTR_IS_TRUE (char const*) ;
 scalar_t__ GIT_ATTR_IS_UNSPECIFIED (char const*) ;
 int GIT_ENOTFOUND ;
 int assert (int **) ;
 int git_attr_get_many_with_session (char const**,int *,int *,int ,char const*,int,char const**) ;
 int git_diff_driver_load (int **,int *,char const*) ;
 int git_error_clear () ;
 int * global_drivers ;
 int strlen (char const*) ;

int git_diff_driver_lookup(
 git_diff_driver **out, git_repository *repo,
 git_attr_session *attrsession, const char *path)
{
 int error = 0;
 const char *values[1], *attrs[] = { "diff" };

 assert(out);
 *out = ((void*)0);

 if (!repo || !path || !strlen(path))
                               ;
 else if ((error = git_attr_get_many_with_session(values, repo,
   attrsession, 0, path, 1, attrs)) < 0)
                          ;

 else if (GIT_ATTR_IS_UNSPECIFIED(values[0]))
                               ;
 else if (GIT_ATTR_IS_FALSE(values[0]))
  *out = &global_drivers[DIFF_DRIVER_BINARY];
 else if (GIT_ATTR_IS_TRUE(values[0]))
  *out = &global_drivers[DIFF_DRIVER_TEXT];


 else if ((error = git_diff_driver_load(out, repo, values[0])) < 0) {
  if (error == GIT_ENOTFOUND) {
   error = 0;
   git_error_clear();
  }
 }

 if (!*out)
  *out = &global_drivers[DIFF_DRIVER_AUTO];

 return error;
}
